# silo

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  flake.nix
src/: app.rs  cli.rs  config.rs  jwt.rs  main.rs  remote.rs  server.rs
