[package]
name = "silo"
version = "0.1.0"
edition = "2021"
description = "Local OpenID mock backend with JWKS, browser login flow, and client_credentials helper"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/hencjo/silo"

[dependencies]
axum = { version = "0.7", features = ["form", "json", "macros"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
http = "1"
jsonwebtoken = "9"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rsa = { version = "0.9", features = ["pem", "sha2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
